# logplot

./: .coveragerc  .gitignore  .travis.yml  ChangeLog.md  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
doc/examples/: log.txt  user_conf.yaml
src/logplot/: __init__.py  cli.py  colors.py  conf.py  default_conf.yaml  log.py  plot.py
tests/: test_conf.py  test_integration.py  test_log.py  test_plot.py
tests/data/conf/: default1.yaml  expected_json_1_1.txt  expected_json_1_2.txt  user1.yaml  user2.yaml
tests/data/integration/: user_conf.yaml
tests/data/log/: conf1.txt  expected_json_1_1.txt  log1.txt
