[metadata]
name = logplot
author = Jerry Pussinen
author-email = jerry.pussinen@gmail.com
url = https://github.com/jerry-git/logplot
summary = Awesome plots of custom logs
description-file = README.md
[entry_points]
console_script =
    logplot = logplot.cli.log_plot

[files]
packages_root = src
data_files =
	conf = src/logplot/default_conf.yaml

[wheel]
universal=1
[flake8]
max-line-length = 88
