[metadata]
name = logplot
author = Jerry Pussinen
author-email = jerry.pussinen@gmail.com
url = https://github.com/jerry-git/logplot
summary = Awesome plots from custom logs
description-file = README.md
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[entry_points]
console_scripts =
    logplot = logplot.cli:log_plot

[files]
packages_root = src

data_files =
    conf = src/logplot/default_conf.yaml

[wheel]
universal = 1

[flake8]
max-line-length = 88
